# just-talk

./: .gitignore  Cargo.toml  PRD.md  README.md  compose.yml  server_walkthrough.pptx
nemospeech/: .dockerignore  Dockerfile  pyproject.toml  server.py  talk.py
src/: audio.rs  config.rs  input.rs  main.rs  midi.rs  overlay.rs  paste.rs  transcribe.rs
